2007-02-07  Ankit Jain  <jankit@novell.com>

	* CustomMakefile.cs: Fix regex to allow empty variables.

2007-02-07  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs (encodeValues): New. Dictionary to keep track of which
	variables to encode when emitting.
	(UpdateProject): Initialize encodeValues.
	(ReadFilesActual): Keep track of whether encoding is required or not.
	(ParseReference): Likewise. Alter signature to take a MakefileVar param.
	(ResolveBuildVars): Add a ref param 'varFound'
	(WriteFiles): EncodeFilename only if required.
	(AsmRefToString): Likewise.

2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileData.cs: Write the resource id to the makefile only when
	  really necessary.

2007-02-07  Ankit Jain  <jankit@novell.com>

	* MakefileProjectServiceExtension.cs (ParseOutput): Add a 'baseDir'
	param.
	(CreateCompilerErrorFromString): Use baseDir to convert relative paths
	to absolute.

2007-02-06  Ankit Jain  <jankit@novell.com>

	* MakefileProjectServiceExtension.cs (Execute): New.
	* MakefileOptionPanelWidget.cs: Add ExecuteTargetName and update.
	Trim () strings from entry boxes.
	* gtk-gui/*: Update.
	* MakefileData.cs (.ctor): Set default value for buildTargetName to "all".

2007-02-06  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanel.cs (CheckNonEmptyFileVar): Remove. Has been moved
	to MakefileOptionPanelWidget.cs 
	* MakefileData.cs: Emit resourceId while writing only if atleast one of
	the resources had it when reading.
	* CustomMakefile.cs (Save): Remove dead code. Use StreamWriter.Write
	instead of StreamWriter.WriteLine

2007-02-06  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs: Combo boxes for file variables should
	react to change in 'Sync' checkbox.
	* gtk-gui/*: Updated.

2007-02-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileOptionPanel.cs, MakefileOptionPanelWidget.cs: Moved all
	  validation code from MakefileOptionPanel to
	  MakefileOptionPanelWidget, so it can be reused by the import