@@ -26,9 +26,8 @@
 		<NodeBuilder id = "AutotoolNodeExtension" class = "MonoDevelop.Autotools.NodeExtension"/>
 	</Extension>
 	
-	<Extension path = "/SharpDevelop/Workbench/ProjectServiceExtensions" extension-nodes="Class">
-		<Class class = "MonoDevelop.Autotools.MakefileReaderExtension" id="MakefileReaderExtension" />
-		<Class class = "MonoDevelop.Autotools.MakefileProjectServiceExtension" id="MakefileProjectServiceExtension" />
+	<Extension path = "/SharpDevelop/Workbench/ProjectServiceExtensions">
+		<Class class = "MonoDevelop.Autotools.MakefileProjectServiceExtension" id="MakefileProjectServiceExtension" insertafter="FinalStep"/>
 	</Extension>
 
 	<Extension path = "/SharpDevelop/Commands">
