@@ -1,3 +1,10 @@
+2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MakefileProjectServiceExtension.cs: Track api changes. In
+	  GetNeedsBuilding, return what the default implementation provides.
+	* MonoDevelop.Autotools.addin.xml: Unregistered the makefile reader.
+	* MonoDevelop.Autotools.mdp: Minor update.
+
 2007-02-07  Ankit Jain  <jankit@novell.com>
 
 	* CustomMakefile.cs: Fix regex to allow empty variables.
